# yt-dlp-gui

./: .black.toml  .editorconfig  .gitignore  BUILD.md  BUILD_zh.md  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  PROJECT_FILES_CHECKLIST.md  QUICKSTART.md  QUICK_REFERENCE.md  README.md  README_zh.md  REFACTORING_SUMMARY.md  SECURITY.md  build.cmd  build.sh  pyproject.toml  requirements-dev.txt  setup.cfg  yt-dlp-gui.cmd  yt-dlp-gui.sh  yt-dlp-gui.spec
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
build_scripts/: README.md
hooks/: hook-yt_dlp_gui.py
tests/: README.md  test_basic.py  test_logic.py
yt_dlp_gui/: __init__.py  app.py  compile_locales.py  config.py  i18n.py  logger.py  logic.py  main.py  settings.py  widgets.py
yt_dlp_gui/locales/en/LC_MESSAGES/: yt_dlp_gui.po
yt_dlp_gui/locales/ja/LC_MESSAGES/: yt_dlp_gui.po
yt_dlp_gui/locales/ko/LC_MESSAGES/: yt_dlp_gui.po
yt_dlp_gui/locales/zh_CN/LC_MESSAGES/: yt_dlp_gui.po
yt_dlp_gui/locales/zh_TW/LC_MESSAGES/: yt_dlp_gui.po
yt_dlp_gui/tabs/: __init__.py  advanced.py  filters.py  general.py  network.py  post.py
