[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "yt-dlp-gui"
version = "0.1.0"
description = "A modern GUI for yt-dlp"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "Unlicense"}
authors = [
    {name = "yt-dlp-gui contributors"},
]
keywords = [
    "yt-dlp",
    "youtube-dl",
    "downloader",
    "gui",
    "youtube",
    "video",
    "audio",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: Public Domain",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Video",
    "Topic :: Internet :: WWW/HTTP",
]
dependencies = [
    "yt-dlp>=2024.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "build>=0.10.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/yt-dlp-gui"
Repository = "https://github.com/yourusername/yt-dlp-gui"
Issues = "https://github.com/yourusername/yt-dlp-gui/issues"
Changelog = "https://github.com/yourusername/yt-dlp-gui/blob/main/CHANGELOG.md"

[project.scripts]
yt-dlp-gui = "yt_dlp_gui.main:run_app"

[tool.hatchling.build.targets.wheel]
packages = ["yt_dlp_gui"]

[tool.hatchling.build.targets.sdist]
include = [
    "/yt_dlp_gui",
    "/README.md",
    "/LICENSE",
    "/CHANGELOG.md",
    "/requirements.txt",
]

